--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@ tagline:
 {% if post.fullview %}
   {{ post.content }}
 {% else %}
-  <a href="{{ site.BASE_PATH }}{{post.url }}">
-  {% if post.shortinfo %}{{ post.shortinfo }}{% elsif post.description %}{{ post.description }}{% else %}..{% endif %}
-  </a>
+  {% if post.shortinfo %}{{ post.shortinfo }}{% elsif post.description %}{{ post.description }}{% else %}post.excerpt{% endif %}
 {% endif %}
 </div>
 </article>
