--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ tagline:
                 </div>
 
         </article>
-
+{% endfor %}
         <hr/>
 
 <ul class="pager"> 
@@ -72,3 +72,5 @@ tagline:
   {% endif %}
 
 </ul>
+
+
