--- a/404.html
+++ b/404.html
@@ -1,45 +1,52 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+---
+layout: page
+---
+<!----------------------------------------------------------------
+     _ _           _ _          
+  __| | |__  _   _| | |         Ascii arts included in this page:
+ / _` | '_ \| | | | | |         - R2D2, provided by: http://www.chris.com/
+| (_| | |_) | |_| | | |         - Texts, generated from: http://www.network-science.de/ascii/
+ \__,_|_.__/ \__, |_|_|         http://github.com/dbtek/dbyll
+-------------|___/------------------------------------------------>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <title> Aw, shit! </title>
-  </head>
-  
-  <body>
-      <pre>
+  <style>
+    pre {
+          background: none;
+          border: none;
+    }
+  </style>
 
-                           444444444       000000000            444444444   
-                          4::::::::4     00:::::::::00         4::::::::4  
-                         4:::::::::4   00:::::::::::::00      4:::::::::4  
-                        4::::44::::4  0:::::::000:::::::0    4::::44::::4  
-                       4::::4 4::::4  0::::::0   0::::::0   4::::4 4::::4  
-                      4::::4  4::::4  0:::::0     0:::::0  4::::4  4::::4  
-                     4::::4   4::::4  0:::::0     0:::::0 4::::4   4::::4  
-                    4::::444444::::4440:::::0 000 0:::::04::::444444::::444
-                    4::::::::::::::::40:::::0 000 0:::::04::::::::::::::::4
-                    4444444444:::::4440:::::0     0:::::04444444444:::::444
-                              4::::4  0:::::0     0:::::0          4::::4  
-                              4::::4  0::::::0   0::::::0          4::::4  
-                              4::::4  0:::::::000:::::::0          4::::4  
-                            44::::::44 00:::::::::::::00         44::::::44
-                            4::::::::4   00:::::::::00           4::::::::4
-                            4444444444     000000000             4444444444
-    
-             ,-----.             _   _     _           _                 _     _               _   
-           ,'_/_|_\_`.          | |_| |__ (_)___   ___| |__   ___  _   _| | __| |  _ __   ___ | |_ 
-          /<<::8[O]::>\         | __| '_ \| / __| / __| '_ \ / _ \| | | | |/ _` | | '_ \ / _ \| __|
-         _|-----------|_        | |_| | | | \__ \ \__ \ | | | (_) | |_| | | (_| | | | | | (_) | |_ 
-     :::|  | ====-=- |  |:::     \__|_| |_|_|___/ |___/_| |_|\___/ \__,_|_|\__,_| |_| |_|\___/ \__|
-     :::|  | -=-==== |  |:::                                                                         
-     :::\  | ::::|()||  /:::     _                                                          
-     ::::| | ....|()|| |::::    | |__   __ _ _ __  _ __   ___ _ __       _____   _____ _ __ 
-         | |_________| |        | '_ \ / _` | '_ \| '_ \ / _ \ '_ \     / _ \ \ / / _ \ '__|
-         | |\_______/| |        | | | | (_| | |_) | |_) |  __/ | | |_  |  __/\ V /  __/ |   
-        /   \ /   \ /   \       |_| |_|\__,_| .__/| .__/ \___|_| |_( )  \___| \_/ \___|_|   
-        `---' `---' `---'                   |_|   |_|              |/                       
-    
+  <pre>
 
-        </pre>
-    </body>
-    </html>
+                       444444444       000000000            444444444   
+                      4::::::::4     00:::::::::00         4::::::::4  
+                     4:::::::::4   00:::::::::::::00      4:::::::::4  
+                    4::::44::::4  0:::::::000:::::::0    4::::44::::4  
+                   4::::4 4::::4  0::::::0   0::::::0   4::::4 4::::4  
+                  4::::4  4::::4  0:::::0     0:::::0  4::::4  4::::4  
+                 4::::4   4::::4  0:::::0     0:::::0 4::::4   4::::4  
+                4::::444444::::4440:::::0 000 0:::::04::::444444::::444
+                4::::::::::::::::40:::::0 000 0:::::04::::::::::::::::4
+                4444444444:::::4440:::::0     0:::::04444444444:::::444
+                          4::::4  0:::::0     0:::::0          4::::4  
+                          4::::4  0::::::0   0::::::0          4::::4  
+                          4::::4  0:::::::000:::::::0          4::::4  
+                        44::::::44 00:::::::::::::00         44::::::44
+                        4::::::::4   00:::::::::00           4::::::::4
+                        4444444444     000000000             4444444444
+
+         ,-----.             _   _     _           _                 _     _               _   
+       ,'_/_|_\_`.          | |_| |__ (_)___   ___| |__   ___  _   _| | __| |  _ __   ___ | |_ 
+      /<<::8[O]::>\         | __| '_ \| / __| / __| '_ \ / _ \| | | | |/ _` | | '_ \ / _ \| __|
+     _|-----------|_        | |_| | | | \__ \ \__ \ | | | (_) | |_| | | (_| | | | | | (_) | |_ 
+ :::|  | ====-=- |  |:::     \__|_| |_|_|___/ |___/_| |_|\___/ \__,_|_|\__,_| |_| |_|\___/ \__|
+ :::|  | -=-==== |  |:::                                                                         
+ :::\  | ::::|()||  /:::     _                                                          
+ ::::| | ....|()|| |::::    | |__   __ _ _ __  _ __   ___ _ __       _____   _____ _ __ 
+     | |_________| |        | '_ \ / _` | '_ \| '_ \ / _ \ '_ \     / _ \ \ / / _ \ '__|
+     | |\_______/| |        | | | | (_| | |_) | |_) |  __/ | | |_  |  __/\ V /  __/ |   
+    /   \ /   \ /   \       |_| |_|\__,_| .__/| .__/ \___|_| |_( )  \___| \_/ \___|_|   
+    `---' `---' `---'                   |_|   |_|              |/                       
+
+
+    </pre>
