--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@ tagline:
                         {% if post.fullview %}
                           {{ post.content }}
                         {% else %}
-
-                        <a href="{{ site.BASE_PATH }}{{post.url }}">
-                          {% if post.shortinfo %}{{ post.shortinfo }}{% elsif post.description %}{{ post.description }}{% else %}post.excerpt{% endif %}
-                        </a>
-        
+                        {% if post.shortinfo %}{{ post.shortinfo }}{% elsif post.description %}{{ post.description }}{% else %}post.excerpt{% endif %}
                 {% endif %}
                 </div>
 
@@ -48,7 +44,7 @@ tagline:
       {% if paginator.previous_page == 1 %}
         <a href="{{ site.BASE_PATH }}">&larr; Newer</a>
       {% else %}
-        <a href="{{ site.BASE_PATH }}page{{ paginator.previous_page }}">&larr; Newer</a>
+        <a href="{{ site.BASE_PATH }}/page{{ paginator.previous_page }}">&larr; Newer</a>
       {% endif %}
     </li>
   {% else %}
