--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ tagline:
                         {% else %}
 
                         <a href="{{ site.BASE_PATH }}{{post.url }}">
-                          {% if post.shortinfo %}{{ post.shortinfo }}{% elsif post.description %}{{ post.description }}{% else %}post.excerpt{% endif %}
+                          {% if post.shortinfo %}{{ post.shortinfo }}{% elsif post.description %}{{ post.description }}{% else %}{{ post.excerpt }}{% endif %}
                         </a>
         
                 {% endif %}
