--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ tagline:
                     {% elsif post.description %}
                         {{ post.description }}
                     {% else %}
-                        post.excerpt
+                        {{ post.excerpt }}
                     {% endif %}
                 {% endif %}
             </div>
