fix relative path error
- with no BASE_PATH it was referencing without base link
- with BASE_PATH there were double / added

--- a/categories.html
+++ b/categories.html
@@ -38,7 +38,7 @@ group: navigation
         {% for node in pages_list %}
           {% if node.title != null %}
             {% if group == null or group == node.group %}
-              <li style="line-height: 35px;"><a href="{{ site.BASE_PATH }}/{{node.url}}">{{node.title}}</a> <span class="text-muted">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+              <li style="line-height: 35px;"><a href="{{ site.BASE_PATH }}{{node.url}}">{{node.title}}</a> <span class="text-muted">- {{ node.date | date: "%B %d, %Y" }}</span></li>
             {% endif %}
           {% endif %}
         {% endfor %}
