Creating the back to top button

--- a/index.html
+++ b/index.html
@@ -73,6 +73,4 @@ tagline:
 
 </ul>
 
-<ul>
-	<li><a href="#"><i class="fa fa-arrow-up"></i>Back to Top</a></li>
-</ul>
+<div style="text-align: center; margin-left: auto; margin-right:auto;"><a class="btn btn-default" href="#"><i class="fa fa-arrow-up"></i>Back to Top</a></div>
