--- a/index.html
+++ b/index.html
@@ -73,4 +73,4 @@ tagline:
 
 </ul>
 
-<div style="text-align: center; margin-left: auto; margin-right:auto;"><a class="btn btn-default" href="#"><i class="fa fa-arrow-up"></i>Back to Top</a></div>
+<div style="text-align: center; margin-left: auto; margin-right:auto;"><a class="btn btn-link" href="#"><i class="fa fa-arrow-up"></i>Back to Top</a></div>
