--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ï»¿<!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,27 +8,27 @@
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
   </head>
   <body>
-    <h3>Ä«Ä«¿ÀÅå ¸µÅ©´Â Ä«Ä«¿ÀÅå ¾ÛÀÌ ¼³Ä¡µÇ¾î ÀÖ´Â ¸ð¹ÙÀÏ ±â±â¿¡¼­¸¸ Àü¼Û °¡´ÉÇÕ´Ï´Ù.</h3>
+    <h3>í”Œë¼ìŠ¤í‹±íŒ©í† ë¦¬ì˜ ë¶€í™œì¸ê°€? ã…‹ã…‹ã…‹ã…‹</h3>
     <a id="kakao-link-btn" href="javascript:;">
       <img src="http://dn.api1.kage.kakao.co.kr/14/dn/btqa9B90G1b/GESkkYjKCwJdYOkLvIBKZ0/o.jpg" />
     </a>
 
     <script>
-    // »ç¿ëÇÒ ¾ÛÀÇ JavaScript Å°¸¦ ¼³Á¤ÇØ ÁÖ¼¼¿ä.
+    // ì‚¬ìš©í•  ì•±ì˜ JavaScript í‚¤ë¥¼ ì„¤ì •í•´ ì£¼ì„¸ìš”.
     Kakao.init('YOUR APP KEY');
 
-    // Ä«Ä«¿ÀÅå ¸µÅ© ¹öÆ°À» »ý¼ºÇÕ´Ï´Ù. Ã³À½ ÇÑ¹ø¸¸ È£ÃâÇÏ¸é µË´Ï´Ù.
+    // ì¹´ì¹´ì˜¤í†¡ ë§í¬ ë²„íŠ¼ì„ ìƒì„±í•©ë‹ˆë‹¤. ì²˜ìŒ í•œë²ˆë§Œ í˜¸ì¶œí•˜ë©´ ë©ë‹ˆë‹¤.
     Kakao.Link.createTalkLinkButton({
       container: '#kakao-link-btn',
-      label: 'Ä«Ä«¿À¸µÅ© »ùÇÃ¿¡ ¿À½Å °ÍÀ» È¯¿µÇÕ´Ï´Ù.',
+      label: 'ì¹´ì¹´ì˜¤ë§í¬ ìƒ˜í”Œì— ì˜¤ì‹  ê²ƒì„ í™˜ì˜í•©ë‹ˆë‹¤.',
       image: {
         src: 'http://dn.api1.kage.kakao.co.kr/14/dn/btqaWmFftyx/tBbQPH764Maw2R6IBhXd6K/o.jpg',
         width: '300',
         height: '200'
       },
       webButton: {
-        text: 'Ä«Ä«¿À µðº§·ÎÆÛ½º',
-        url: 'https://dev.kakao.com/docs/js' // ¾Û ¼³Á¤ÀÇ À¥ ÇÃ·§Æû¿¡ µî·ÏÇÑ µµ¸ÞÀÎÀÇ URLÀÌ¾î¾ß ÇÕ´Ï´Ù.
+        text: 'ì¹´ì¹´ì˜¤ ë””ë²¨ë¡œí¼ìŠ¤',
+        url: 'https://dev.kakao.com/docs/js' // ì•± ì„¤ì •ì˜ ì›¹ í”Œëž«í¼ì— ë“±ë¡í•œ ë„ë©”ì¸ì˜ URLì´ì–´ì•¼ í•©ë‹ˆë‹¤.
       }
     });
     </script>
