--- a/sample.html
+++ b/sample.html
@@ -20,15 +20,15 @@
     // 카카오톡 링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
     Kakao.Link.createTalkLinkButton({
       container: '#kakao-link-btn',
-      label: '카카오링크 샘플에 오신 것을 환영합니다.',
+      label: '플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가?',
       image: {
-        src: 'http://dn.api1.kage.kakao.co.kr/14/dn/btqaWmFftyx/tBbQPH764Maw2R6IBhXd6K/o.jpg',
+        src: 'http://jjongun.github.io/assets/pf_logo.PNG',
         width: '300',
         height: '200'
       },
       webButton: {
-        text: '카카오 디벨로퍼스',
-        url: 'https://dev.kakao.com/docs/js' // 앱 설정의 웹 플랫폼에 등록한 도메인의 URL이어야 합니다.
+        text: '플라스틱공장 공장장',
+        url: 'http://scripter.co.kr/' // 앱 설정의 웹 플랫폼에 등록한 도메인의 URL이어야 합니다.
       }
     });
     </script>
