--- a/sample.html
+++ b/sample.html
@@ -8,14 +8,14 @@
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
   </head>
   <body>
-    <h3>플라스틱팩토리의 부활인가? ㅋㅋㅋㅋ</h3>
+    <h3> 2 플라스틱팩토리의 부활인가? ㅋㅋㅋㅋ</h3>
     <a id="kakao-link-btn" href="javascript:;">
       <img src="http://dn.api1.kage.kakao.co.kr/14/dn/btqa9B90G1b/GESkkYjKCwJdYOkLvIBKZ0/o.jpg" />
     </a>
 
     <script>
     // 사용할 앱의 JavaScript 키를 설정해 주세요.
-    Kakao.init('YOUR APP KEY');
+    Kakao.init('91c49fdad141a1ae10161d223bf4f118');
 
     // 카카오톡 링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
     Kakao.Link.createTalkLinkButton({
@@ -28,7 +28,7 @@
       },
       webButton: {
         text: '플라스틱공장 공장장',
-        url: 'http://scripter.co.kr/' // 앱 설정의 웹 플랫폼에 등록한 도메인의 URL이어야 합니다.
+        url: 'http://scripter.co.kr/' // 앱 설정의 웹 플랫폼에 등록한 도메인의 URL이어야 합니다. // https://dev.kakao.com/docs/js
       }
     });
     </script>
