--- a/sample.html
+++ b/sample.html
@@ -10,7 +10,7 @@
   <body>
     <h3> 2 플라스틱팩토리의 부활인가? ㅋㅋㅋㅋ</h3>
     <a id="kakao-link-btn" href="javascript:;">
-      <img src="http://dn.api1.kage.kakao.co.kr/14/dn/btqa9B90G1b/GESkkYjKCwJdYOkLvIBKZ0/o.jpg" />
+      <img src="http://jjongun.github.io/assets/img/message_test.png" />
     </a>
 
     <script>
@@ -20,14 +20,14 @@
     // 카카오톡 링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
     Kakao.Link.createTalkLinkButton({
       container: '#kakao-link-btn',
-      label: '플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가? 플라스틱 공장의 부활인가?',
+      label: '친구야! 이거 봤냐? 진짜 대박 큰 세일에 폼나더라. 혹시 나한테 투자 안 할래? 내가 성공해서 두 배로 갚을게 \아! 근데 지금 대박세일 기간이래 \n#말하면 대박세일 이벤트',
       image: {
-        src: 'http://jjongun.github.io/assets/pf_logo.PNG',
+        src: 'http://jjongun.github.io/assets/img/sale_banner.png',
         width: '300',
         height: '200'
       },
       webButton: {
-        text: '플라스틱공장 공장장',
+        text: '플라스틱공장',
         url: 'http://scripter.co.kr/' // 앱 설정의 웹 플랫폼에 등록한 도메인의 URL이어야 합니다. // https://dev.kakao.com/docs/js
       }
     });
