--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,7 @@
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
   </head>
   <body>
-    <h3> 2 플라스틱팩토리의 부활인가? ㅋㅋㅋㅋ</h3>
+    <h3>카카오톡 테스트 입니다.</h3>
     <a id="kakao-link-btn" href="javascript:;">
       <img src="http://jjongun.github.io/assets/img/message_test.png" />
     </a>
