--- a/one-catagory.html
+++ b/one-catagory.html
@@ -3,6 +3,7 @@ layout: page
 title: Categories
 header: One By Category
 group: navigation
+permalink: demo
 ---
 
 <p>Posts in category "demo" are:</p>
