real content time

--- a/one-catagory.html
+++ b/one-catagory.html
@@ -3,13 +3,13 @@ layout: page
 title: Categories
 header: One By Category
 group: navigation
-permalink: /demo
+permalink: /landscape-analysis
 ---
 
-<p>Posts in category "demo" are:</p>
+<p>Posts in category "landscape-analysis" are:</p>
 
 <ul>
-  {% for post in site.categories.demo %}
+  {% for post in site.categories.landscape-analysis %}
     {% if post.url %}
     <h2>
       <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
