--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Categories
-header: One By Category
+title: Landscape Analysis
+header: 
 group: navigation
 permalink: /landscape-analysis
 ---
