--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 tagline:
+description: welcome to our website, let us tell you about it here
 ---
 
 {% for post in paginator.posts %}
@@ -41,7 +42,7 @@ tagline:
 {% endfor %}
 <hr/>
 
-<ul class="pager"> 
+<ul class="pager">
 
   {% if paginator.previous_page %}
   <li class="previous">
@@ -56,7 +57,7 @@ tagline:
     <a>&larr; Newer</a>
   </li>
   {% endif %}
-  
+
   <li>
     <span class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   </li>
@@ -67,7 +68,7 @@ tagline:
   </li>
   {% else %}
   <li class="next disabled">
-    <a>Older &rarr;</a>        
+    <a>Older &rarr;</a>
   </li>
   {% endif %}
 
