--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@ description: welcome to our website, let us tell you about it here
 
 </article>
 {% endfor %}
-<hr/>
 
+<!-- NOT CLEAR WE NEED THIS SO HIDING
+<hr/>
 <ul class="pager">
 
   {% if paginator.previous_page %}
@@ -73,3 +74,4 @@ description: welcome to our website, let us tell you about it here
   {% endif %}
 
 </ul>
+-->
