--- a/market-consolitation.html
+++ b/market-consolitation.html
@@ -4,7 +4,7 @@ title: Do we agree to the terms & conditions of research
 header:
 group: navigation
 description: This is a blub
-permalink: /terms-and-conditions
+permalink: /landscape-analysis
 ---
 <article class="home">
 
