tag and name is consistent

--- a/market-consolitation.html
+++ b/market-consolitation.html
@@ -9,7 +9,7 @@ permalink: /market-consolitation
 <article class="home">
 
 <ul>
-  {% for post in site.tag.t&cs %}
+  {% for post in site.tags.market-consolitation %}
     {% if post.url %}
     <h2>
       <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
