--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -9,7 +9,7 @@ permalink: /terms-and-conditions
 <article class="home">
 
 <ul>
-  {% for post in site.tags.terms %}
+  {% for post in site.tags.terms-and-conditions %}
     {% if post.url %}
     <h2>
       <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
