--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@ description: welcome to our website, let us tell you about it here
   <li><a href="/roadmap-for-action">Roadmap for Action</a></li>
   <li><a href="/terms-and-conditions">Terms & Conditions</a></li>
   <li><a href="/market-consolidation">Market Consolidation</a></li>
+  <li>BONUS: <a href="/all-posts">All Posts</a></li>
 </ul>
