--- a/all-posts.html
+++ b/all-posts.html
@@ -4,7 +4,7 @@ tagline:
 description: welcome to our website, let us tell you about it here
 ---
 
-{% for post in paginator.posts %}
+{% for post in site.posts %}
 
 <article class="home">
 
