--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ description: welcome to our website, let us tell you about it here
 <iframe src="https://giphy.com/embed/y65VoOlimZaus" width="480" height="439" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/idk-shrug-power-rangers-y65VoOlimZaus">via GIPHY</a></p>
 
 <ul>
-  <li><a href="/landscape-analysis">Landscape Analysis</a></li>
-  <li><a href="/roadmap-for-action">Roadmap for Action</a></li>
-  <li><a href="/terms-and-conditions">Terms & Conditions</a></li>
-  <li><a href="/market-consolidation">Market Consolidation</a></li>
-  <li>BONUS: <a href="/all-posts">All Posts</a></li>
+  <li><a href="{{ site.BASE_PATH }}/landscape-analysis">Landscape Analysis</a></li>
+  <li><a href="{{ site.BASE_PATH }}/roadmap-for-action">Roadmap for Action</a></li>
+  <li><a href="{{ site.BASE_PATH }}/terms-and-conditions">Terms & Conditions</a></li>
+  <li><a href="{{ site.BASE_PATH }}/market-consolidation">Market Consolidation</a></li>
+  <li>BONUS: <a href="{{ site.BASE_PATH }}/all-posts">All Posts</a></li>
 </ul>
