--- a/market-consolidation.html
+++ b/market-consolidation.html
@@ -4,12 +4,12 @@ title: Do we agree to the terms & conditions of research
 header:
 group: navigation
 description: This is a blub
-permalink: /market-consolitation
+permalink: /market-consolidation
 ---
 <article class="home">
 
 <ul>
-  {% for post in site.tags.market-consolitation %}
+  {% for post in site.tags.market-consolidation %}
     {% if post.url %}
     <h2>
       <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
