--- a/market-consolidation.html
+++ b/market-consolidation.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Do we agree to the terms & conditions of research
+title: Should we allow monopolies over research and education?
 header:
 group: navigation
-description: This is a blub
+description: Probably not, we think. 
 permalink: /market-consolidation
 ---
 <article class="home">
