we have three threds now!

--- a/financial-analysis.html
+++ b/financial-analysis.html
@@ -1,15 +1,15 @@
 ---
 layout: page
-title: Should we allow monopolies over research and education?
+title: What can financial analysis tell us about publishers?
 header:
 group: navigation
-description: Probably not, we think.
-permalink: /market-consolidation
+description: Money talks, so we're listening.
+permalink: /financial-analysis
 ---
 <article class="home">
 
 <ul>
-  {% for post in site.tags.market-consolidation %}
+  {% for post in site.tags.financial-analysis %}
     {% if post.url %}
     <h2>
       <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
