--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ description: welcome to our website, let us tell you about it here
   <li><a href="{{ site.BASE_PATH }}/roadmap-for-action">Roadmap for Action</a></li>
   <li><a href="{{ site.BASE_PATH }}/terms-and-conditions">Terms & Conditions</a></li>
   <li><a href="{{ site.BASE_PATH }}/market-consolidation">Market Consolidation</a></li>
+  <li><a href="{{ site.BASE_PATH }}/financial-analysis">Financial Analysis</a></li>
   <li>BONUS: <a href="{{ site.BASE_PATH }}/all-posts">All Posts</a></li>
 </ul>
