remove stuff we don't use (i hope)

--- a/roadmap-for-action.html
+++ b/roadmap-for-action.html
@@ -1,8 +1,6 @@
 ---
 layout: page
-title: Categories
-header: One By Category
-group: navigation
+title: Roadmap for Action
 permalink: /roadmap-for-action
 ---
 <ul>
