--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
 tagline:
-description: welcome to our website, let us tell you about it here
+title: Community Owned Infrastructure
+description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways. These decisions will also shape libraries role in the scholarly enterprise, now and for the future.
 ---
   <h1>Reports</h1>
     <ul>
@@ -16,7 +17,7 @@ description: welcome to our website, let us tell you about it here
     </ul>
   <h1>Recent posts</h1>
     <ul>
-      <li>BONUS: <a href="{{ site.BASE_PATH }}/all-posts">All Posts</a></li>
+      <li><a href="{{ site.BASE_PATH }}/all-posts">Recent (All) Posts</a></li>
     </ul>
 
     <iframe src="https://giphy.com/embed/y65VoOlimZaus" width="480" height="439" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/idk-shrug-power-rangers-y65VoOlimZaus">via GIPHY</a></p>
