--- a/all-posts.html
+++ b/all-posts.html
@@ -19,7 +19,7 @@ description: welcome to our website, let us tell you about it here
   </span>
 
   <h2>
-    <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+    <a href="{% if post.link %}{{ post.link }}{% else %}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}<span class="link-arrow"> &rarr;</span>{% endif %}
   </h2>
 
   <div>
