--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -8,7 +8,7 @@ permalink: /landscape-analysis
   {% for post in site.categories.landscape-analysis %}
     {% if post.url %}
     <h2>
-      <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+      <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
     </h2>
     {% endif %}
   {% endfor %}
