--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -8,7 +8,7 @@ permalink: /terms-and-conditions
   {% for post in site.tags.terms-and-conditions %}
     {% if post.url %}
     <h2>
-      <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+      <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
     </h2>
     <div>
       {% if post.fullview %}
