--- a/new-thread.html
+++ b/new-thread.html
@@ -2,23 +2,15 @@
 layout: page
 title: What can financial analysis tell us about publishers?
 description: Money talks, so we're listening.
-permalink: /new-tread
+permalink: /new-thread
 ---
-
 
    <h2>
      <a href="https://josephmcarthur.github.io/infrastructure/roadmap-for-action/three-categories-of-action">Three Categories Of Action</a>
    </h2>
-   <div>
-
     <p>
      The purpose of this document is to build on the Landscape Analysis by offering a roadmap of potential actions that stakeholders can use to chart both individual and collective responses.
-   </p> 
-
-   </div>
-
-
-
+   </p>
    <h2>
      <a href="https://josephmcarthur.github.io/infrastructure/landscape-analysis/summary">Summary</a>
    </h2>
