--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -24,7 +24,8 @@ permalink: /terms-and-conditions
          </span>
       {% if post.categories %}
           <span>
-               from {{ post.categories }}{% else %}
+               from {{ post.categories }}
+               {% else %}
           </span>
       {% endif %}
     <b></p>
