--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -22,9 +22,9 @@ permalink: /terms-and-conditions
            {% endcase %}
            {{ post.date | date: "%Y" }}
          </span>
-      {% if post.categories .size > 0 %}
+      {% if post.categories.size > 0 %}
           <span>
-               from <a href="">{{ post.categories }}</a>
+               from <a href="post.categories.url">{{ post.categories }}</a>
           </span>
       {% endif %}
     </b></p>
