--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -24,7 +24,7 @@ permalink: /terms-and-conditions
          </span>
       {% if post.categories.size > 0 %}
           <span>
-               from <a href="post.categories.url">{{ post.categories }}</a>
+               from <a href="{{ post.categories.url }}">{{ post.categories }}</a>
           </span>
       {% endif %}
     </b></p>
