--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -24,7 +24,7 @@ permalink: /terms-and-conditions
          </span>
       {% if post.categories.size > 0 %}
           <span>
-               from <a href="{{ site.BASE_PATH }}{{ post.category }}">{{ post.category | replace: "-", " " }}</a>
+               from <a href="{{ site.BASE_PATH }}{{ post.categories }}">{{ post.category | replace: "-", " " }}</a>
           </span>
       {% endif %}
     </b></p>
