--- a/terms-and-conditions-new.html
+++ b/terms-and-conditions-new.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: What can financial analysis tell us about publishers?
-description: Money talks, so we're listening.
+title: Do we agree to the terms & conditions of research
+description: This is a blub
 permalink: /terms-and-conditions-new
 ---
   <!-- An executive summary post. This would be manuall added to each t&c -->
