--- a/roadmap-for-action.html
+++ b/roadmap-for-action.html
@@ -4,7 +4,7 @@ title: Roadmap for Action
 permalink: /roadmap-for-action
 ---
 <ul>
-  {% for post in site.categories.roadmap-for-action %}
+  {% for post in site.categories.roadmap-for-action reversed %}
     {% if post.url %}
     <h2>
       <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
