--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -6,7 +6,7 @@ permalink: /landscape-analysis
 report_download: https://testurl.org
 ---
 <ul>
-  {% for post in site.categories.'landscape analysis' %}
+  {% for post in site.categories.'landscape-analysis' %}
     {% if post.url %}
     <h2>
       <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
