better copy and bits

--- a/roadmap-for-action.html
+++ b/roadmap-for-action.html
@@ -2,6 +2,8 @@
 layout: page
 title: Roadmap for Action
 permalink: /roadmap-for-action
+description:  The need for academic institutions to act to retain control of infrastructure, data and data analytics is here to stay. The time to act is now.
+report_download: https://testurl.org
 ---
 <ul>
   {% for post in site.categories.roadmap-for-action reversed %}
