--- a/roadmap-for-action.html
+++ b/roadmap-for-action.html
@@ -7,23 +7,42 @@ report_download: https://testurl.org
 ---
 <ul>
   {% for post in site.categories.roadmap-for-action reversed %}
-    {% if post.url %}
-    <h2>
-      <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
-    </h2>
-    <div>
-      {% if post.fullview %}
-      {{ post.content }}
-      {% else %}
-      {% if post.shortinfo %}
-      {{ post.shortinfo }}
-      {% elsif post.description %}
-      {{ post.description }}
-      {% else %}
-      {{ post.excerpt }}
-      {% endif %}
-      {% endif %}
-    </div>
+  {% if post.url %}
+  <h2>
+    <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
+  </h2>
+  <p><b>
+    posted on <span>
+         {% assign d = post.date | date: "%d" | plus:'0' %}
+         {{ post.date | date: "%B" }}
+         {% case d %}
+           {% when 1 or 21 or 31 %}{{ d }}st,
+           {% when 2 or 22 %}{{ d }}nd,
+           {% when 3 or 23 %}{{ d }}rd,
+           {% else %}{{ d }}th,
+         {% endcase %}
+         {{ post.date | date: "%Y" }}
+       </span>
+    {% if post.categories.size > 0 %}
+        <span>
+             from <a href="{{ site.BASE_PATH }}/{{ post.categories }}">{{ post.categories }}</a>
+        </span>
     {% endif %}
-  {% endfor %}
+  </b></p>
+
+  <div>
+    {% if post.fullview %}
+    {{ post.content }}
+    {% else %}
+    {% if post.shortinfo %}
+    {{ post.shortinfo }}
+    {% elsif post.description %}
+    {{ post.description }}
+    {% else %}
+    {{ post.excerpt }}
+    {% endif %}
+    {% endif %}
+  </div>
+  {% endif %}
+{% endfor %}
 </ul>
