support better mvp for non-content pages

--- a/index.html
+++ b/index.html
@@ -19,3 +19,4 @@ description: Data and data analytics are spreading fast at higher education inst
     <ul>
       <li><a href="{{ site.BASE_PATH }}/all-posts">Recent (All) Posts</a></li>
     </ul>
+    <p>The concent on this site is licenced CC-BY by SPARC, and the code is open source on Github. </p>
