--- a/la2.html
+++ b/la2.html
@@ -6,7 +6,7 @@ description:  The need for academic institutions to act to retain control of inf
 report_download: https://testurl.org
 ---
 <ul>
-  {% for post in site.category.landscape-analysis reversed %}
+  {% for post in site.categories.landscape-analysis reversed %}
   {% if post.url %}
   <h2>
     <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
@@ -23,7 +23,7 @@ report_download: https://testurl.org
          {% endcase %}
          {{ post.date | date: "%Y" }}
        </span>
-    {% if post.category.size > 0 %}
+    {% if post.categories.size > 0 %}
         <span>
              from <a href="{{ site.BASE_PATH }}/{{ post.category }}">{{ post.category }}</a>
         </span>
