--- a/la2.html
+++ b/la2.html
@@ -25,7 +25,7 @@ report_download: https://testurl.org
        </span>
     {% if post.categories.size > 0 %}
         <span>
-             from <a href="{{ site.BASE_PATH }}/{{ post.category }}">{{ post.category }}</a>
+             from <a href="{{ site.BASE_PATH }}/{{ post.category }}">{{ post.category | replace: '-',' ' }}</a>
         </span>
     {% endif %}
   </b></p>
