make it all work

--- a/market-consolidation.html
+++ b/market-consolidation.html
@@ -25,7 +25,7 @@ permalink: /market-consolidation
        </span>
     {% if post.categories.size > 0 %}
         <span>
-             from <a href="{{ site.BASE_PATH }}/{{ post.categories }}">{{ post.categories }}</a>
+             from <a href="{{ site.BASE_PATH }}/{{ post.category }}">{{ post.category | replace: '-',' ' }}</a>
         </span>
     {% endif %}
   </b></p>
