--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ description: Data and data analytics are spreading fast at higher education inst
   <h1>Threads</h1>
     <ul>
       <li><a href="{{ site.BASE_PATH }}/terms-and-conditions">Terms & Conditions</a></li>
+      <li><a href="{{ site.BASE_PATH }}/terms-and-conditions-new">Terms & Conditions TEST</a></li>
       <li><a href="{{ site.BASE_PATH }}/market-consolidation">Market Consolidation</a></li>
       <li><a href="{{ site.BASE_PATH }}/financial-analysis">Financial Analysis</a></li>
     </ul>
