add new sections H wants

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ description: Data and data analytics are spreading fast at higher education inst
       <li><a href="{{ site.BASE_PATH }}/terms-and-conditions-new">Terms & Conditions TEST</a></li>
       <li><a href="{{ site.BASE_PATH }}/market-consolidation">Market Consolidation</a></li>
       <li><a href="{{ site.BASE_PATH }}/financial-analysis">Financial Analysis</a></li>
+      <li><a href="{{ site.BASE_PATH }}/risk-mitigation">Risk Mitigation</a></li>
+      <li><a href="{{ site.BASE_PATH }}/strategic-choices">Strategic Choices</a></li>
+      <li><a href="{{ site.BASE_PATH }}/community-actions">Community Actions</a></li>
+
     </ul>
   <h1>Recent posts</h1>
     <ul>
