--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@ description: Data and data analytics are spreading fast at higher education inst
     <ul>
       <li><a href="{{ site.BASE_PATH }}/all-posts">Recent (All) Posts</a></li>
     </ul>
-    <p>The concent on this site is licenced CC-BY by SPARC, and the code is open source on Github. </p>
+    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0;height: .8em;" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a> by <a href="https://sparcopen.org/" target="_blank"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo.png" alt="SPARC Logo" style="height: .8em;" ></a>, and the code is open source on Github.</p>
