--- a/community-actions.html
+++ b/community-actions.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Community Actions
-description: Community-based,structural actions are possible end-game solutions that may allow groups of institutions to retake control of their data infrastructure. 
+description: Community-based,structural actions are possible end-game solutions that may allow groups of institutions to retake control of their data infrastructure.
 permalink: /community-actions
 ---
 <ul>
@@ -24,7 +24,7 @@ permalink: /community-actions
          </span>
       {% if post.categories.size > 0 %}
           <span>
-               from <a href="{{ site.BASE_PATH }}/{{ post.category }}">{{ post.category  | replace: '-',' ' }}</a>
+            from <a href="{{ site.BASE_PATH }}/{{ post.category }}" style="text-transform:capitalize;">{{ post.category  | replace: '-',' ' }}</a>
           </span>
       {% endif %}
     </b></p>
