--- a/strategic-choices.html
+++ b/strategic-choices.html
@@ -24,7 +24,7 @@ permalink: /strategic-choices
          </span>
       {% if post.categories.size > 0 %}
           <span>
-               from <a href="{{ site.BASE_PATH }}/{{ post.category }}">{{ post.category  | replace: '-',' ' }}</a>
+            from <a href="{{ site.BASE_PATH }}/{{ post.category }}" style="text-transform:capitalize;">{{ post.category  | replace: '-',' ' }}</a>
           </span>
       {% endif %}
     </b></p>
