give claudio some style

--- a/authors.html
+++ b/authors.html
@@ -5,12 +5,12 @@ title: Authors
 description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways. These decisions will also shape libraries role in the scholarly enterprise, now and for the future.
 ---
 
-<div class="row">
+<div class="row article">
   <div class="col-sm-6">
     <img src="{{ site.BASE_PATH }}/assets/media/claudio.jpg" alt="Photo of claudio">
   </div>
 
-  <div class="col-sm-6">
+  <div class="col-sm-6 article">
   <h1>Claudio</h1>
     <p>
       Claudio Aspesi, a respected market analyst with more than a decade of experience covering the academic publishing market for international investors. Between 2004 and 2016, Aspesi was the Senior Research Analyst at Sanford C. Bernstein covering European Media Stocks. The academic publishing market – and Reed Elsevier and Pearson in specific – was a key area focus for him during his tenure. Previously he was Global Senior Vice President of Strategy at EMI Music and was responsible for defining EMI’s business model as the music industry entered the digital age. Before joining EMI in 2002, Claudio was a member of the executive team at Airclic, an Internet infrastructure company and, prior to that, a partner at McKinsey and Co., working with many leading media and entertainment companies.
