--- a/authors.html
+++ b/authors.html
@@ -7,7 +7,7 @@ description: Data and data analytics are spreading fast at higher education inst
 
 <div class="row article">
   <div class="col-sm-6">
-    <img src="{{ site.BASE_PATH }}/assets/media/claudio.jpg" alt="Photo of claudio">
+    <img src="{{ site.BASE_PATH }}/assets/media/claudio.jpg" alt="Photo of Claudio Aspesi">
   </div>
 
   <div class="col-sm-6 article">
