--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@ description: Data and data analytics are spreading fast at higher education inst
     <ul>
       <li><a href="{{ site.BASE_PATH }}/all-posts">Recent (All) Posts</a></li>
     </ul>
-    Licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="height:1.5em;" src="{{ site.BASE_PATH }}/assets/media/ccby-nice.png" /></a> by <a href="https://sparcopen.org/" target="_blank" property="cc:SPARC" rel="cc:{{ site.BASE_PATH }}"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo_black.png" alt="SPARC Logo" style="height: 1.5em;" ></a>, and the code is open source on Github.</p>
+    Content is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="height:1.5em;" src="{{ site.BASE_PATH }}/assets/media/ccby-nice.png" /></a> by <a href="https://sparcopen.org/" target="_blank" property="cc:SPARC" rel="cc:{{ site.BASE_PATH }}"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo_black.png" alt="SPARC Logo" style="height: 1.5em;" ></a>. The code is open source on Github.</p>
