--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -5,7 +5,7 @@ description: This report was commissioned in response to the growing trend of co
 permalink: /landscape-analysis
 report_download: https://testurl.org
 ---
-<ul>
+<ul style="padding-top:20%">
   {% for post in site.categories.landscape-analysis reversed %}
     {% if post.url %}
     <h2>
