--- a/roadmap-for-action.html
+++ b/roadmap-for-action.html
@@ -5,43 +5,14 @@ permalink: /roadmap-for-action
 description:  The need for academic institutions to act to retain control of infrastructure, data and data analytics is here to stay. The time to act is now.
 report_download: https://testurl.org
 ---
-<ul>
+<ul style="padding-top:20%">
   {% for post in site.categories.roadmap-for-action reversed %}
   {% if post.url %}
   <h2>
     <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
   </h2>
-  <p><b>
-    posted on <span>
-         {% assign d = post.date | date: "%d" | plus:'0' %}
-         {{ post.date | date: "%B" }}
-         {% case d %}
-           {% when 1 or 21 or 31 %}{{ d }}st,
-           {% when 2 or 22 %}{{ d }}nd,
-           {% when 3 or 23 %}{{ d }}rd,
-           {% else %}{{ d }}th,
-         {% endcase %}
-         {{ post.date | date: "%Y" }}
-       </span>
-    {% if post.categories.size > 0 %}
-        <span>
-          from <a href="{{ site.BASE_PATH }}/{{ post.category }}" style="text-transform:capitalize;">{{ post.category  | replace: '-',' ' }}</a>
-        </span>
-    {% endif %}
-  </b></p>
-
   <div>
-    {% if post.fullview %}
-    {{ post.content }}
-    {% else %}
-    {% if post.shortinfo %}
-    {{ post.shortinfo }}
-    {% elsif post.description %}
     {{ post.description }}
-    {% else %}
-    {{ post.excerpt }}
-    {% endif %}
-    {% endif %}
   </div>
   {% endif %}
 {% endfor %}
