--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -5,12 +5,16 @@ description: This report was commissioned in response to the growing trend of co
 permalink: /landscape-analysis
 report_download: https://testurl.org
 ---
-<ul style="padding-top:20%">
+
+<ul style="padding-top:10%">
   {% for post in site.categories.landscape-analysis reversed %}
     {% if post.url %}
     <h2>
       <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
     </h2>
+    <div>
+      {{ post.description }}
+    </div>
     {% endif %}
   {% endfor %}
 </ul>
